[package]
name = "meow-nft-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
cw-multi-test = "0.18.0"
